style.css
/* ... */
@media(min-width: 481px)and (max-width: 768px)and (orientation: landscape) {

    h1,
    h2 {
        transform: scale(40%);
        display: inline-block;
        width: 100vw;
    }

    h2 {
        position: absolute;
        top: 20px;
        left: 50%;
        transform: translate(-50%) scale(50%);

    }

    .hands {

        position: absolute;
        top: -20px;
        left: 50%;
        transform: translate(-50%) scale(50%);

    }

    .play {
        position: absolute;
        top: 170px;
        left: 24.5%;
        transform: scale(50%);
    }

    .battle {
        position: absolute;
        top: 175px;
        left: -19%;
        transform: scale(50%);
        width: 100%;
    }

    .statistics {
        position: absolute;
        bottom: 20%;
        left: 80%;
        transform: translate(-50%);
        font-size: 0.8rem;
    }

    .playerActive {
        transform: translate(-35%);
    }

    .computerActive {
        transform: translate(8%);
    }

    .computerCrownSpot {
        transform: translate(80%);
    }

    .playerCrownSpot {
        transform: translate(-130%);
    }

    .aboutMe {
        position: absolute;
        bottom: -10%;
        overflow: hidden;
        margin: 0px;
        padding: 0px;
        height: 15px;
        line-height: 10px;

    }

    .aboutMe a {
        font-size: 10px;

    }

    body {
        max-width: 640px;
    }
}

/* queries for iphone-x etc. landscape */

@media(min-width: 769px)and (max-width: 1024px) and (max-device-height: 375px) and (orientation: landscape) {

    h1 {
        position: absolute;
        top: 0%;
        left: 10%;
    }

    h2 {
        position: absolute;
        top: 10%;
        left: 5%;
    }

    .hands {
        transform: translate(-15%, -10%) scale(60%);
    }

    .play {
        transform: translate(-230%, -130%) scale(50%);
    }

    .battle {
        transform: translate(-68%, -14%) scale(60%);
    }

    .statistics {
        position: absolute;
        top: -100px;
        left: 630px;
        font-size: 0.5rem;
        text-align: left;
        width: 200px;
    }

    .statistics>h1 {
        position: absolute;
        top: -80px;
        left: 0px;
        font-size: 2rem;

    }

    .statistics>p {
        text-align: left;
    }

    .aboutMe {
        max-width: 100vw;
        bottom: 0px;

    }

    /* trying to block screen movement in small mobiles */

    body {
        max-width: 100vw;
        max-height: 100vh;
        overflow-x: hidden !important;
        overflow-y: hidden !important;
    }
}

@media(min-width: 320px)and (max-width: 480px)and (orientation: portrait) {
    /* trying to block movement of the screen on mobile screens */



    body {
        overflow-x: hidden !important;
        overflow-y: hidden !important;
    }

    h1,
    h2 {
        font-size: 0.5rem;
        width: 400px;
    }

    .statistics>h1 {
        font-size: 1.5rem;
    }

    .hands {
        position: absolute;
        top: -100%;
        left: 50%;
        transform: translate(-50%) scale(30%);
    }

    .play {
        position: absolute;
        top: 110px;
        left: 50%;
        transform: translate(-50%) scale(45%);
    }

    .battle {
        background-image: url(./Images/backgroundTest_375x812.jpg);
        background-position: center;
        background-size: cover;
        position: absolute;
        top: 115px;
        left: 50%;
        transform: translate(-50%) scale(40%);
        width: 620px;
    }

    .playerActive {
        transform: translate(-30%);
    }

    .playerCrownSpot {
        transform: translate(-60%);
    }

    .computerCrownSpot {
        transform: translate(140%, 0%);
    }

    .statistics {
        position: absolute;
        bottom: 30%;
        transform: translate(-50%) scale(50%);
    }

    .aboutMe a {
        font-size: 7px;
    }

    .aboutMe {
        bottom: 0px;
        height: 14px;
        line-height: 7px;
        max-width: 100vw;
    }
}

/* media queries for Pixel2Xl and RedmiNote6 landscape */

@media(min-width: 769px)and (max-width: 1024px) and (min-device-height: 376px) and (max-device-height: 411px) and (orientation: landscape) {

    h1 {
        position: absolute;
        top: 0%;
        left: 20%;
        font-size: 1.2rem;
    }

    h2 {
        position: absolute;
        top: 8%;
        left: 11%;
        font-size: 1.2rem;
    }

    .hands {
        transform: translate(-15%, -15%) scale(50%);
    }

    .play {
        transform: translate(-230%, -150%) scale(50%);
    }

    .battle {
        transform: translate(-68%, -24%) scale(60%);
    }

    .statistics {
        position: absolute;
        top: -125px;
        left: 600px;
        text-align: left;
        width: 200px;
    }

    .statistics>h1 {
        position: absolute;
        top: -40px;
        left: 0px;
        font-size: 1.3em;

    }

    .statistics>p {
        text-align: left;
        font-size: 0.9em;
    }

    .aboutMe {
        max-width: 100vw;
        bottom: 0px;

    }
}

